# padls

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
scripts/: test.padls
src/: app.rs  bit.rs  circuit.rs  circuit.wgsl  context.rs  gates.rs  gpu.rs  main.rs  module.rs  ops.rs  parser.rs  runner.rs
src/assets/: seven_seg.css  seven_seg.html  style.css
src/kernels/: circuit.wgsl
src/op/: mod.rs
src/parser/: mod.rs
src/parser/test_scripts/: full_adder.pals  gputest.padls  simple_and_gate.pals  sr_latch.pals  test.padls  test.pals  test1.pals  video.padls
src/runtime/: mod.rs
