[package]
name = "padls"
version = "0.0.1"
edition = "2021"
description = "Parallel Asynchronous Digital Logic Simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "padls"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
crossbeam = "0.8.2"
derive_more = "0.99.17"
futures = "0.3.28"
futures-util = "0.3.28"
nom = "7.1.3"
petgraph = "0.6.3"
rustc-hash = "1.1.0"
tokio = { version = "1.27.0", features = ["full"] }
console-subscriber = "0.1.8"
clap = { version = "4.2.4", features = ["derive"] }
egui = "0.21.0"
eframe = { version = "0.21.3", features = ["wgpu"] }
# async-timer = { version = "1.0.0-beta.9", features = ["tokio1"] }
