[package]
name = "padls"
version = "0.0.1"
edition = "2021"
description = "Parallel Asynchronous Digital Logic Simulator"

[[bin]]
name = "padls"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
crossbeam = "0.8"
derive_more = "0.99"
eframe = { version = "0.28", features = ["wgpu"] }
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
pollster = "0.3.0"
logos = "0.14"
petgraph = "0.6.3"
rustc-hash = "2.0"
clap = { version = "4.5", features = ["derive"] }
bytemuck = "1.16"
wgpu = "0.20.1"
ariadne = "0.4.1"
